started on js functionality

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,32 @@
 <body>
     <h1>Boxing With JS</h1>
 
+    <form id="item-form">
+        <div>
+            <label for="name">Name: </label>
+            <input type="text" name="name" id="name">
+        </div>
+        <br>
+        <div>
+            <label for="size">Size: </label>
+            <input type="text" name="size" id="size">
+        </div>
+        <br>
+        <div>
+            <label for="description">Description: </label>
+            <input type="text" name="description" id="description">
+        </div>
+        <br>
+        <div id='box-checkboxes'>
+            
+        </div>
+        <br>
+        <input type="submit" value="Create Item">
+    </form>
+
+    <div></div>
+
+    <script src="javascripts/models/box.js"></script>
     <script src="javascripts/index.js"></script>
 </body>
 </html>
