added api class to handle fetch requests

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,8 +31,11 @@
         <input type="submit" value="Create Item">
     </form>
 
-    <div></div>
+    <div id="box-div">
+        
+    </div>
 
+    <script src="javascripts/services/api.js"></script>
     <script src="javascripts/models/box.js"></script>
     <script src="javascripts/index.js"></script>
 </body>
