--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h1>Boxing With JS</h1>
-
+    <h1>-----------</h1>
+    <h2>Create a New Item</h2>
     <form id="item-form">
         <div>
             <label for="name">Name: </label>
