added showBoxes method to Box class

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -32,6 +32,8 @@
         <input type="submit" value="Create Item">
     </form>
 
+    <button id="show-boxes">Click here to display the boxes</button>
+    
     <div id="box-div">
         
     </div>
